--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=romaji2kanji
 server.port=8081
+server.servlet.context-path=/api
 security.enabled=true
 
-spring.datasource.url=jdbc:h2:./h2-db/testdb;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=1;MODE=MySQL
+spring.datasource.url=jdbc:h2:./h2-db/testdb;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
