--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8081
 server.servlet.context-path=/api
 security.enabled=true
 
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS = true
+
 spring.datasource.url=jdbc:h2:./h2-db/testdb;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
