--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ romaji2kanji.client.cors.address = http://localhost:3000
 
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS = true
 
-spring.datasource.url=jdbc:h2:./h2-db/testdb;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;MODE=MySQL
+spring.datasource.url=jdbc:h2:./h2-db/romaji2kanji;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
