--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ server.port=8081
 server.servlet.context-path=/api
 security.enabled=true
 
-romaji2kanji.client.cors.address = http://localhost:3000
-
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS = true
 
+#cesta k db
 spring.datasource.url=jdbc:h2:./h2-db/romaji2kanji;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
@@ -14,3 +13,8 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+r2k.default.user.username=user
+r2k.default.user.password=password
+r2k.default.admin.username=admin
+r2k.default.admin.password=password
